Fix mobile alignment, make all tiles optional, add fan tile

--- a/src/styles/_tiles.scss
+++ b/src/styles/_tiles.scss
@@ -2,14 +2,14 @@
 
 .stat-container {
   background: rgba(33, 33, 33, 0.7);
-  margin-top: 6px;
-  margin-right: 6px;
+  margin-top: 2px;
+  margin-right: 2px;
   height: 120px;
 
   & > label {
     @include overlay-text();
     display: block;
-    padding: 1.25rem 0 0 1.5rem;
+    padding: 1.25rem 0 0 16px;
     font-size: 14px;
     font-weight: bold;
   }
@@ -20,7 +20,7 @@
     font-weight: 400;
     display: block;
     margin-top: 1.5rem;
-    margin-left: 1.5rem;
+    margin-left: 16px;
     letter-spacing: -2px;
 
     & > .unit {
